夜色直播修改 + 动态修改小程序标题功能

--- a/小程序模板/比分模板/imgmobanrace4/project.swan.json
+++ b/小程序模板/比分模板/imgmobanrace4/project.swan.json
@@ -18,8 +18,8 @@
     },
     "swan": {
         "baiduboxapp": {
-            "extensionJsVersion": "1.11.5",
-            "swanJsVersion": "3.160.8"
+            "swanJsVersion": "3.160.8",
+            "extensionJsVersion": "1.11.5"
         }
     }
 }
