--- a/小程序集合/夜色直播/project.swan.json
+++ b/小程序集合/夜色直播/project.swan.json
@@ -18,8 +18,8 @@
     },
     "swan": {
         "baiduboxapp": {
-            "extensionJsVersion": "1.11.5",
-            "swanJsVersion": "3.160.8"
+            "swanJsVersion": "3.160.8",
+            "extensionJsVersion": "1.11.5"
         }
     }
 }
