视频模板14增加动态title功能、提交echo视频模板14

--- a/小程序集合/樱桃直播/project.swan.json
+++ b/小程序集合/樱桃直播/project.swan.json
@@ -18,8 +18,8 @@
     },
     "swan": {
         "baiduboxapp": {
-            "extensionJsVersion": "1.13.1",
-            "swanJsVersion": "3.180.4"
+            "swanJsVersion": "3.180.4",
+            "extensionJsVersion": "1.13.1"
         }
     }
 }
