视频模板16发布 修改下拉分页加载 loading BUG修改 骚虎视频百度小程序制作

--- a/小程序模板/视频模板/videotemplate14/project.swan.json
+++ b/小程序模板/视频模板/videotemplate14/project.swan.json
@@ -1,5 +1,5 @@
 {
-    "appid": "19655322",
+    "appid": "20322768",
     "compilation-args": {
         "common": {
             "enhance": true
@@ -7,7 +7,7 @@
     },
     "host": "baiduboxapp",
     "preview": {
-        "packageId": 411412
+        "packageId": 514926
     },
     "projectname": "videotemplate9",
     "publish": {
@@ -18,8 +18,8 @@
     },
     "swan": {
         "baiduboxapp": {
-            "swanJsVersion": "3.180.7",
-            "extensionJsVersion": "1.13.1"
+            "extensionJsVersion": "1.13.1",
+            "swanJsVersion": "3.180.7"
         }
     }
 }
