--- a/小程序模板/视频模板/videotemplate15/project.swan.json
+++ b/小程序模板/视频模板/videotemplate15/project.swan.json
@@ -1,5 +1,5 @@
 {
-    "appid": "19655322",
+    "appid": "20322768",
     "compilation-args": {
         "common": {
             "enhance": true
@@ -7,7 +7,7 @@
     },
     "host": "baiduboxapp",
     "preview": {
-        "packageId": 411408
+        "packageId": 514924
     },
     "projectname": "videotemplate9",
     "publish": {
@@ -18,8 +18,8 @@
     },
     "swan": {
         "baiduboxapp": {
-            "swanJsVersion": "3.160.8",
-            "extensionJsVersion": "1.11.5"
+            "extensionJsVersion": "1.13.1",
+            "swanJsVersion": "3.180.255-rc"
         }
     }
 }
