--- a/小程序模板/视频模板/videotemplate14/project.swan.json
+++ b/小程序模板/视频模板/videotemplate14/project.swan.json
@@ -18,8 +18,8 @@
     },
     "swan": {
         "baiduboxapp": {
-            "extensionJsVersion": "1.13.1",
-            "swanJsVersion": "3.180.7"
+            "swanJsVersion": "3.180.7",
+            "extensionJsVersion": "1.13.1"
         }
     }
 }
