--- a/小程序模板/比分模板/imgmobanrace26/project.swan.json
+++ b/小程序模板/比分模板/imgmobanrace26/project.swan.json
@@ -1,5 +1,5 @@
 {
-    "appid": "19643977",
+    "appid": "18617105",
     "compilation-args": {
         "common": {
             "enhance": true
@@ -7,7 +7,7 @@
     },
     "host": "baiduboxapp",
     "preview": {
-        "packageId": 601131
+        "packageId": 765393
     },
     "projectname": "imgmoban3",
     "publish": {
@@ -18,8 +18,8 @@
     },
     "swan": {
         "baiduboxapp": {
-            "swanJsVersion": "3.180.255-rc",
-            "extensionJsVersion": "1.13.1"
+            "extensionJsVersion": "1.13.1",
+            "swanJsVersion": "3.180.255-rc"
         }
     }
 }
