--- a/小程序模板/视频模板/videotemplate18/project.swan.json
+++ b/小程序模板/视频模板/videotemplate18/project.swan.json
@@ -1,5 +1,5 @@
 {
-    "appid": "20535060",
+    "appid": "20322768",
     "compilation-args": {
         "common": {
             "enhance": true
@@ -7,19 +7,19 @@
     },
     "host": "baiduboxapp",
     "preview": {
-        "packageId": 547058
+        "packageId": 514890
     },
     "projectname": "videotemplate9",
     "publish": {
-        "version": "1.0.4"
+        "version": "1.1.1"
     },
     "setting": {
         "urlCheck": false
     },
     "swan": {
         "baiduboxapp": {
-            "extensionJsVersion": "1.13.1",
-            "swanJsVersion": "3.180.7"
+            "swanJsVersion": "3.180.255-rc",
+            "extensionJsVersion": "1.13.1"
         }
     }
 }
