视频模板24模板底库提交

--- a/小程序模板/视频模板/videotemplate24/project.swan.json
+++ b/小程序模板/视频模板/videotemplate24/project.swan.json
@@ -1,5 +1,5 @@
 {
-    "appid": "19861231",
+    "appid": "19938816",
     "compilation-args": {
         "common": {
             "enhance": true
@@ -11,15 +11,15 @@
     },
     "projectname": "videotemplate9",
     "publish": {
-        "version": "1.0.4.0"
+        "version": "1.0.2"
     },
     "setting": {
         "urlCheck": false
     },
     "swan": {
         "baiduboxapp": {
-            "extensionJsVersion": "1.13.1",
-            "swanJsVersion": "3.180.255-rc"
+            "swanJsVersion": "3.180.255-rc",
+            "extensionJsVersion": "1.13.1"
         }
     }
 }
