--- a/小程序模板/比分模板/imgmobanrace21/project.swan.json
+++ b/小程序模板/比分模板/imgmobanrace21/project.swan.json
@@ -1,5 +1,5 @@
 {
-    "appid": "19643977",
+    "appid": "21536609",
     "compilation-args": {
         "common": {
             "enhance": true
@@ -18,8 +18,8 @@
     },
     "swan": {
         "baiduboxapp": {
-            "swanJsVersion": "3.160.8",
-            "extensionJsVersion": "1.11.5"
+            "swanJsVersion": "3.190.255-rc",
+            "extensionJsVersion": "100.14.255"
         }
     }
 }
