--- a/小程序模板/比分模板/imgmobanrace27/project.swan.json
+++ b/小程序模板/比分模板/imgmobanrace27/project.swan.json
@@ -1,5 +1,5 @@
 {
-    "appid": "18617105",
+    "appid": "21536609",
     "compilation-args": {
         "common": {
             "enhance": true
@@ -11,15 +11,15 @@
     },
     "projectname": "imgmoban3",
     "publish": {
-        "version": "1.0.7.0"
+        "version": "1.0.0"
     },
     "setting": {
         "urlCheck": false
     },
     "swan": {
         "baiduboxapp": {
-            "swanJsVersion": "3.180.255-rc",
-            "extensionJsVersion": "1.13.1"
+            "extensionJsVersion": "1.13.1",
+            "swanJsVersion": "3.180.255-rc"
         }
     }
 }
