--- a/小程序模板/视频模板/videotemplate27/project.swan.json
+++ b/小程序模板/视频模板/videotemplate27/project.swan.json
@@ -1,5 +1,5 @@
 {
-    "appid": "21536609",
+    "appid": "19938816",
     "compilation-args": {
         "common": {
             "enhance": true
@@ -7,11 +7,11 @@
     },
     "host": "baiduboxapp",
     "preview": {
-        "packageId": 765393
+        "packageId": 514890
     },
-    "projectname": "imgmoban3",
+    "projectname": "videotemplate9",
     "publish": {
-        "version": "1.0.1"
+        "version": "1.0.2"
     },
     "setting": {
         "urlCheck": false
