--- a/小程序模板/综合模板/complex1/app.json
+++ b/小程序模板/综合模板/complex1/app.json
@@ -23,6 +23,12 @@
                 "selectedIconPath": "./images/race.png"
             },
             {
+                "pagePath": "pages/index/index",
+                "text": "视频",
+                "iconPath": "./images/home.png",
+                "selectedIconPath": "./images/home1.png"
+            },
+            {
                 "pagePath": "pages/web/web",
                 "text": "咨询",
                 "iconPath": "./images/message.png",
