--- a/小程序模板/视频模板/videotemplate22/app.json
+++ b/小程序模板/视频模板/videotemplate22/app.json
@@ -3,7 +3,7 @@
         "pages/index/index",
         "pages/web/web",
         "pages/detail/detail",
-        "pages/newpage/new"
+        "pages/bannerweb/bannerweb"
     ],
     "window": {
         "navigationBarBackgroundColor": "#ffffff",
