修改视频模板1-21 app.json

--- a/小程序模板/视频模板/videotemplate3/app.json
+++ b/小程序模板/视频模板/videotemplate3/app.json
@@ -1,9 +1,9 @@
 {
     "pages": [
         "pages/index/index",
+        "pages/web/web",
         "pages/detail/detail",
-        "pages/newpage/new",
-        "pages/web/web"
+        "pages/bannerweb/bannerweb"
     ],
     "window": {
         "navigationBarBackgroundColor": "#ffffff",
