--- a/小程序模板/视频模板/videotemplate4/app.json
+++ b/小程序模板/视频模板/videotemplate4/app.json
@@ -1,8 +1,9 @@
 {
     "pages": [
         "pages/index/index",
+        "pages/web/web",
         "pages/detail/detail",
-        "pages/newpage/new"
+        "pages/bannerweb/bannerweb"
     ],
     "window": {
         "navigationBarBackgroundColor": "#ffffff",
