--- a/小程序模板/视频模板/videotemplate4/project.swan.json
+++ b/小程序模板/视频模板/videotemplate4/project.swan.json
@@ -18,8 +18,8 @@
     },
     "swan": {
         "baiduboxapp": {
-            "extensionJsVersion": "1.7.3",
-            "swanJsVersion": "3.120.9"
+            "swanJsVersion": "3.190.255-rc",
+            "extensionJsVersion": "100.14.255"
         }
     }
 }
