--- a/小程序模板/比分模板/imgmobanrace24/project.swan.json
+++ b/小程序模板/比分模板/imgmobanrace24/project.swan.json
@@ -1,5 +1,5 @@
 {
-    "appid": "19643977",
+    "appid": "21912138",
     "compilation-args": {
         "common": {
             "enhance": true
@@ -7,19 +7,19 @@
     },
     "host": "baiduboxapp",
     "preview": {
-        "packageId": 601131
+        "packageId": 516079
     },
-    "projectname": "imgmoban3",
+    "projectname": "006直播",
     "publish": {
-        "version": "1.0.7.0"
+        "version": "1.0.2"
     },
     "setting": {
         "urlCheck": false
     },
     "swan": {
         "baiduboxapp": {
-            "swanJsVersion": "3.180.255-rc",
-            "extensionJsVersion": "1.13.1"
+            "extensionJsVersion": "1.13.1",
+            "swanJsVersion": "3.180.255-rc"
         }
     }
 }
