--- a/小程序模板/视频模板/videotemplate26/app.json
+++ b/小程序模板/视频模板/videotemplate26/app.json
@@ -10,5 +10,25 @@
         "navigationBarTextStyle": "black",
         "navigationBarTitleText": "智能小程序",
         "backgroundTextStyle": "light"
+    },
+    
+    "tabBar": {
+        "list": [{
+                "pagePath": "pages/index/index",
+                "text": "首页",
+                "iconPath": "./images/home.png",
+                "selectedIconPath": "./images/home1.png"
+            },
+            {
+                "pagePath": "pages/web/web",
+                "text": "咨询",
+                "iconPath": "./images/message.png",
+                "selectedIconPath": "./images/message1.png"
+            }
+        ],
+        "backgroundColor": "#ffffff",
+        "borderStyle": "white",
+        "color": "#666666",
+        "selectedColor": "#7BA6EF"
     }
 }
