--- a/小程序模板/视频模板/videotemplate26/project.swan.json
+++ b/小程序模板/视频模板/videotemplate26/project.swan.json
@@ -1,5 +1,5 @@
 {
-    "appid": "19938816",
+    "appid": "21947161",
     "compilation-args": {
         "common": {
             "enhance": true
@@ -18,8 +18,8 @@
     },
     "swan": {
         "baiduboxapp": {
-            "swanJsVersion": "3.180.255-rc",
-            "extensionJsVersion": "1.13.1"
+            "extensionJsVersion": "1.13.1",
+            "swanJsVersion": "3.180.255-rc"
         }
     }
 }
