--- a/小程序模板/比分模板/imgmobanrace34/project.swan.json
+++ b/小程序模板/比分模板/imgmobanrace34/project.swan.json
@@ -1,25 +1,12 @@
 {
-    "appid": "21643361",
-    "compilation-args": {
-        "common": {
-            "enhance": true
-        }
-    },
     "host": "baiduboxapp",
-    "preview": {
-        "packageId": 833281
-    },
-    "projectname": "imgmoban3",
-    "publish": {
-        "version": "1.0.7.0"
-    },
     "setting": {
-        "urlCheck": false
+        "urlCheck": true
     },
     "swan": {
         "baiduboxapp": {
-            "swanJsVersion": "3.180.255-rc",
-            "extensionJsVersion": "1.13.1"
+            "swanJsVersion": "3.190.255-rc",
+            "extensionJsVersion": "100.14.255"
         }
     }
 }
