--- a/小程序模板/视频模板/videotemplate28/project.swan.json
+++ b/小程序模板/视频模板/videotemplate28/project.swan.json
@@ -1,5 +1,5 @@
 {
-    "appid": "19938816",
+    "appid": "22268171",
     "compilation-args": {
         "common": {
             "enhance": true
@@ -11,15 +11,15 @@
     },
     "projectname": "videotemplate9",
     "publish": {
-        "version": "1.0.2"
+        "version": "1.0.1"
     },
     "setting": {
         "urlCheck": false
     },
     "swan": {
         "baiduboxapp": {
-            "swanJsVersion": "3.180.255-rc",
-            "extensionJsVersion": "1.13.1"
+            "extensionJsVersion": "1.13.1",
+            "swanJsVersion": "3.180.255-rc"
         }
     }
 }
