比分模板2.0 模板5 提交

--- a/小程序模板/比分模板2.0/imgmobanrace1/project.swan.json
+++ b/小程序模板/比分模板2.0/imgmobanrace1/project.swan.json
@@ -2,7 +2,8 @@
     "appid": "18617227",
     "compilation-args": {
         "common": {
-            "enhance": true
+            "enhance": true,
+            "useStrict": false
         }
     },
     "host": "baiduboxapp",
