--- a/小程序模板/咨询模板/imgmobantabbal19/project.swan.json
+++ b/小程序模板/咨询模板/imgmobantabbal19/project.swan.json
@@ -1,5 +1,5 @@
 {
-    "appid": "22572384",
+    "appid": "22532340",
     "compilation-args": {
         "common": {
             "enhance": true
@@ -11,15 +11,15 @@
     },
     "projectname": "imgmoban3",
     "publish": {
-        "version": "1.0.1"
+        "version": "1.0.2"
     },
     "setting": {
         "urlCheck": false
     },
     "swan": {
         "baiduboxapp": {
-            "swanJsVersion": "3.150.255-rc",
-            "extensionJsVersion": "1.10.4"
+            "extensionJsVersion": "1.10.4",
+            "swanJsVersion": "3.150.255-rc"
         }
     }
 }
