--- a/小程序模板/比分模板2.0/imgmobanrace1/project.swan.json
+++ b/小程序模板/比分模板2.0/imgmobanrace1/project.swan.json
@@ -19,8 +19,8 @@
     },
     "swan": {
         "baiduboxapp": {
-            "extensionJsVersion": "1.13.1",
-            "swanJsVersion": "3.180.255-rc"
+            "swanJsVersion": "3.180.255-rc",
+            "extensionJsVersion": "1.13.1"
         }
     }
 }
