--- a/小程序模板/咨询模板/imgmobantabbal26/project.swan.json
+++ b/小程序模板/咨询模板/imgmobantabbal26/project.swan.json
@@ -18,8 +18,8 @@
     },
     "swan": {
         "baiduboxapp": {
-            "extensionJsVersion": "1.10.4",
-            "swanJsVersion": "3.150.255-rc"
+            "swanJsVersion": "3.150.255-rc",
+            "extensionJsVersion": "1.10.4"
         }
     }
 }
