--- a/小程序集合/石榴视频/project.swan.json
+++ b/小程序集合/石榴视频/project.swan.json
@@ -7,19 +7,19 @@
     },
     "host": "baiduboxapp",
     "preview": {
-        "packageId": 411408
+        "packageId": 491784
     },
     "projectname": "videotemplate9",
     "publish": {
-        "version": "1.0.11.0"
+        "version": "1.0.1"
     },
     "setting": {
         "urlCheck": false
     },
     "swan": {
         "baiduboxapp": {
-            "extensionJsVersion": "1.11.5",
-            "swanJsVersion": "3.160.8"
+            "extensionJsVersion": "100.14.255",
+            "swanJsVersion": "3.190.255-rc"
         }
     }
 }
