--- a/小程序集合/榴莲视频/app.json
+++ b/小程序集合/榴莲视频/app.json
@@ -3,7 +3,8 @@
         "pages/index/index",
         "pages/web/web",
         "pages/detail/detail",
-        "pages/newpage/new"
+        "pages/newpage/new",
+        "pages/bannerweb/bannerweb"
     ],
     "window": {
         "navigationBarBackgroundColor": "#ffffff",
