--- a/小程序集合/风情直播/project.swan.json
+++ b/小程序集合/风情直播/project.swan.json
@@ -11,15 +11,15 @@
     },
     "projectname": "imgmoban3",
     "publish": {
-        "version": "1.0.7.0"
+        "version": "1.0.1"
     },
     "setting": {
         "urlCheck": false
     },
     "swan": {
         "baiduboxapp": {
-            "swanJsVersion": "3.160.8",
-            "extensionJsVersion": "1.11.5"
+            "extensionJsVersion": "1.16.2",
+            "swanJsVersion": "3.200.116"
         }
     }
 }
